<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/ViewEncuesta"
        android:layout_width="409dp"
        android:layout_height="39dp"
        android:layout_marginBottom="43dp"
        android:background="@color/colorMorado"
        app:layout_constraintBottom_toTopOf="@+id/tvNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvEncuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/txEncuesta"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ViewEncuesta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ViewEncuesta"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="222dp"
        android:text="@string/txNombre"
        app:layout_constraintBottom_toTopOf="@+id/tvEspecialidad"
        app:layout_constraintEnd_toStartOf="@+id/edNombre"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ViewEncuesta"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/htNombre"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvNombre"
        app:layout_constraintEnd_toStartOf="@+id/swAnonimo"
        app:layout_constraintStart_toEndOf="@+id/tvNombre"
        app:layout_constraintTop_toTopOf="@+id/tvNombre"
        tools:ignore="MissingConstraints" />

    <Switch
        android:id="@+id/swAnonimo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:minHeight="48dp"
        android:text="@string/txAnonimo"
        app:layout_constraintBottom_toBottomOf="@+id/edNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edNombre"
        app:layout_constraintTop_toTopOf="@+id/edNombre"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvSistemaOperativo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/txSistemaOperativo"
        app:layout_constraintBottom_toTopOf="@+id/rgSistema"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edNombre"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/rgSistema"
        android:layout_width="133dp"
        android:layout_height="141dp"
        app:layout_constraintBottom_toTopOf="@+id/cbDAM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edNombre"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/rbMac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txMac" />

        <RadioButton
            android:id="@+id/rbWindows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txWindows" />

        <RadioButton
            android:id="@+id/rbLinux"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/txLinux"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvEspecialidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="9dp"
        android:text="@string/txEspecialidad"
        app:layout_constraintBottom_toTopOf="@+id/cbDAM"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/cbDAM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/txDAM"
        app:layout_constraintBottom_toTopOf="@+id/cbASIR"
        app:layout_constraintStart_toStartOf="@+id/rgSistema"
        app:layout_constraintTop_toBottomOf="@+id/tvEspecialidad"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/cbDAW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:text="@string/txDAW"
        app:layout_constraintBottom_toTopOf="@+id/tvHoras"
        app:layout_constraintStart_toStartOf="@+id/cbASIR"
        app:layout_constraintTop_toBottomOf="@+id/cbASIR"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/cbASIR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txASIR"
        app:layout_constraintBottom_toTopOf="@+id/cbDAW"
        app:layout_constraintStart_toStartOf="@+id/cbDAM"
        app:layout_constraintTop_toBottomOf="@+id/cbDAM"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvHoras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="13dp"
        android:text="@string/txHoras"
        app:layout_constraintBottom_toTopOf="@+id/btValidar"
        app:layout_constraintEnd_toStartOf="@+id/sbHoras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbDAW"
        tools:ignore="MissingConstraints" />

    <SeekBar
        android:id="@+id/sbHoras"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginEnd="23dp"
        android:max="10"
        android:progressTint="@color/AzulClaro"
        android:thumbTint="@color/AzulClaro"
        app:layout_constraintBottom_toBottomOf="@+id/tvHoras"
        app:layout_constraintEnd_toStartOf="@+id/tvContador"
        app:layout_constraintStart_toEndOf="@+id/tvHoras"
        app:layout_constraintTop_toTopOf="@+id/tvHoras"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvContador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="57dp"
        android:text="@string/txContador"
        app:layout_constraintBottom_toBottomOf="@+id/sbHoras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sbHoras"
        app:layout_constraintTop_toTopOf="@+id/sbHoras"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btValidar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="1dp"
        android:text="@string/txValidar"
        app:layout_constraintBottom_toTopOf="@+id/tvDatos"
        app:layout_constraintEnd_toStartOf="@+id/btReiniciar"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHoras"
        tools:ignore="MissingConstraints"
        android:onClick="addAlumno" />

    <Button
        android:id="@+id/btReiniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txReiniciar"
        app:layout_constraintBottom_toBottomOf="@+id/btValidar"
        app:layout_constraintEnd_toStartOf="@+id/btCuantas"
        app:layout_constraintStart_toEndOf="@+id/btValidar"
        app:layout_constraintTop_toTopOf="@+id/btValidar"
        tools:ignore="MissingConstraints"
        android:onClick="delAlumno" />

    <Button
        android:id="@+id/btCuantas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txCuantas"
        app:layout_constraintBottom_toBottomOf="@+id/btReiniciar"
        app:layout_constraintEnd_toStartOf="@+id/btResumen"
        app:layout_constraintStart_toEndOf="@+id/btReiniciar"
        app:layout_constraintTop_toTopOf="@+id/btReiniciar"
        tools:ignore="MissingConstraints"
        android:onClick="modAlumno" />

    <Button
        android:id="@+id/btResumen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txResumen"
        app:layout_constraintBottom_toBottomOf="@+id/btCuantas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btCuantas"
        app:layout_constraintTop_toTopOf="@+id/btCuantas"
        tools:ignore="MissingConstraints"
        android:onClick="buscarAlumno" />

    <TextView
        android:id="@+id/tvDatos"
        android:layout_width="412dp"
        android:layout_height="111dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btValidar"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ID"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/tvContador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toEndOf="@+id/rgSistema"
        app:layout_constraintTop_toBottomOf="@+id/swAnonimo"
        app:layout_constraintVertical_bias="0.551" />

</androidx.constraintlayout.widget.ConstraintLayout>