<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VentanaDatos2">

    <View
        android:id="@+id/ViewEncuesta"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@color/colorMorado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvEncuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="3dp"
        android:text="@string/txEncuestaResultado"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ViewEncuesta"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="82dp"
        android:layout_marginBottom="73dp"
        android:text="@string/txNombre"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvSistemaOperativo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvSistemaOperativo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="155dp"
        android:text="@string/txSistemaOperativo"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvEspecialidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:text="@string/txEspecialidad"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSistemaOperativo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvHoras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="65dp"
        android:text="@string/txHoras"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEspecialidad"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvContador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:text="@string/txContador"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvHoras"
        app:layout_constraintEnd_toEndOf="@+id/tvDatosEspecialidad"
        app:layout_constraintStart_toStartOf="@+id/btVolver"
        app:layout_constraintTop_toTopOf="@+id/tvHoras"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginBottom="76dp"
        android:text="@string/txVolver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvDatosNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:hint="@string/htDatosNombre"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvNombre"
        app:layout_constraintStart_toEndOf="@+id/tvNombre"
        app:layout_constraintTop_toTopOf="@+id/tvNombre" />

    <TextView
        android:id="@+id/tvDatosSistema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:hint="@string/htDatosSistema"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvSistemaOperativo"
        app:layout_constraintStart_toEndOf="@+id/tvSistemaOperativo"
        app:layout_constraintTop_toTopOf="@+id/tvSistemaOperativo" />

    <TextView
        android:id="@+id/tvDatosEspecialidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:hint="@string/htDatosEspecialidad"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvEspecialidad"
        app:layout_constraintStart_toEndOf="@+id/tvEspecialidad"
        app:layout_constraintTop_toTopOf="@+id/tvEspecialidad" />

</androidx.constraintlayout.widget.ConstraintLayout>